--- a/templates/docs/examples/patterns/pagination/pagination-verbose.html
+++ b/templates/docs/examples/patterns/pagination/pagination-verbose.html
@@ -1,10 +1,38 @@
 {% extends "_layouts/examples.html" %} {% block title %}Pagination / Previous and next buttons only {% endblock %} {% block standalone_css %}patterns_pagination{% endblock %} {% block content %}
-<ol class="p-pagination">
-  <li class="p-pagination__item">
-    <a class="p-pagination__link--previous" href="#previous" title="Previous page"><i class="p-icon--contextual-menu">Previous page</i><span>Previous page</span></a>
-  </li>
-  <li class="p-pagination__item">
-    <a class="p-pagination__link--next" href="#next" title="Next page"><span>Next page</span><i class="p-icon--contextual-menu">Next page</i></a>
-  </li>
-</ol>
+<div class="u-fixed-width u-clearfix">
+  <ol class="p-pagination">
+    <li class="p-pagination__item">
+      <a class="p-pagination__link--previous" href="#previous" title="Previous page"><i class="p-icon--contextual-menu">Previous page</i></a>
+    </li>
+    <li class="p-pagination__item">
+      <a class="p-pagination__link" href="#1">1</a>
+    </li>
+    <li class="p-pagination__item">
+      <a class="p-pagination__link" href="#2">2</a>
+    </li>
+    <li class="p-pagination__item">
+      <a class="p-pagination__link is-active" href="#3">3</a>
+    </li>
+    <li class="p-pagination__item">
+      <a class="p-pagination__link" href="#4">4</a>
+    </li>
+    <li class="p-pagination__item">
+      <a class="p-pagination__link" href="#5">5</a>
+    </li>
+    <li class="p-pagination__item">
+      <a class="p-pagination__link--next" href="#next" title="Next page"><i class="p-icon--contextual-menu">Next page</i></a>
+    </li>
+  </ol>
+  <ol class="p-pagination">
+    <li class="p-pagination__item">
+      <a class="p-pagination__link--previous" href="#previous" title="Previous page"><i class="p-icon--contextual-menu">Previous page</i><span>Previous page</span></a>
+    </li>
+    <li class="p-pagination__item">
+      <a class="p-pagination__link--next" href="#next" title="Next page"><span>Next page</span><i class="p-icon--contextual-menu">Next page</i></a>
+    </li>
+  </ol>
+  <button class="p-button has-icon"><i class="p-icon--contextual-menu"></i><span>Previous page</span></button>
+  <button class="p-button has-icon"><span>Next page</span><i class="p-icon--contextual-menu"></i></button>
+  <button class="p-button has-icon"><i class="p-icon--contextual-menu"></i></button>
+</div>
 {% endblock %}
