--- a/templates/docs/examples/patterns/pagination/pagination-verbose.html
+++ b/templates/docs/examples/patterns/pagination/pagination-verbose.html
@@ -1,10 +1,10 @@
 {% extends "_layouts/examples.html" %} {% block title %}Pagination / Previous and next buttons only {% endblock %} {% block standalone_css %}patterns_pagination{% endblock %} {% block content %}
 <ol class="p-pagination">
   <li class="p-pagination__item">
-    <a class="p-pagination__link--previous" href="#previous" title="Previous page"><i class="p-icon--contextual-menu">Previous page</i><span>Previous page</span></a>
+    <a class="p-pagination__link--previous" href="#previous" title="Previous page"><i class="p-icon--contextual-menu"></i><span>Previous page</span></a>
   </li>
   <li class="p-pagination__item">
-    <a class="p-pagination__link--next" href="#next" title="Next page"><span>Next page</span><i class="p-icon--contextual-menu">Next page</i></a>
+    <a class="p-pagination__link--next" href="#next" title="Next page"><span>Next page</span><i class="p-icon--contextual-menu"></i></a>
   </li>
 </ol>
 {% endblock %}
