Add basic application layout example with navigation and main content

--- a/scss/_vanilla.scss
+++ b/scss/_vanilla.scss
@@ -45,6 +45,9 @@
 @import 'patterns_tabs';
 @import 'patterns_tooltips';
 
+// Layouts
+@import 'layouts_application';
+
 // Utilities
 @import 'utilities_animations';
 @import 'utilities_baseline-grid';
@@ -118,6 +121,10 @@
   @include vf-p-table-sortable;
   @include vf-p-tabs;
   @include vf-p-tooltips;
+
+  // Layouts
+  @include vf-l-application;
+
   // Utilities
   @include vf-u-align;
   @include vf-u-animations;
