--- a/templates/docs/examples/layouts/application.html
+++ b/templates/docs/examples/layouts/application.html
@@ -3,26 +3,28 @@
 
 {% block content %}
 
-<div class="l-app">
-  <div class="l-toggle">
+<div class="l-application">
+  <div class="l-navigation-bar">
     <span class="js-menu-toggle">Menu</span>
   </div>
 
-  <div class="l-sidebar is-hidden">
-    <p class="pin" style="text-align: right"><span class="js-menu-pin">Pin</span></p>
-    <p class="toggle" style="text-align: right"><span class="js-menu-close">Close</span></p>
-    <p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p>
-    <p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p>
-    <p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p>
-    <p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p>
+  <div class="l-navigation is-collapsed">
+    <div class="l-navigation__content">
+      <div class="poc-navigation-controls">
+        <button class="p-button--base has-icon u-no-margin poc-navigation__close js-menu-close"><i class="p-icon--close"></i></button>
+        <button class="p-button--base has-icon u-no-margin poc-navigation__pin js-menu-pin"><i class="p-icon--close p-icon--pin"></i></button>
+      </div>
+      <div class="poc-side-navigation">
+        <p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p>
+        <p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p>
+        <p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p>
+        <p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p>
+      </div>
+    </div>
   </div>
 
   <div class="l-main">
-    <p>Content</p>
-    <button class="js-aside-toggle">Toggle aside panel</button>
-    <button class="js-overlay-toggle">Toggle overlay panel</button>
-    <p><button class="js-overlay-align-toggle">Toggle aligned overlay panel</button> Content content content content contentcontent contentcontent contentcontent contentcontent contentcontent contentcontent contentcontent content content content content content content content content content content content content content content content content content content content content content content content content content content content content content content </p>
-    <p class='u-align--right'><button class="js-overlay-align-toggle">Toggle aligned overlay panel</button></p>
+    <h3>Content</h3>
     <p>Content content content content contentcontent contentcontent contentcontent contentcontent contentcontent contentcontent contentcontent content content content content content content content content content content content content content content content content content content content content content content content content content content content content content content</p>
     <p>Content content content content contentcontent contentcontent contentcontent contentcontent contentcontent contentcontent contentcontent content content content content content content content content content content content content content content content content content content content content content content content content content content content content content content </p>
     <p>Content content content content contentcontent contentcontent contentcontent contentcontent contentcontent contentcontent contentcontent content content content content content content content content content content content content content content content content content content content content content content content content content content content content content content </p>
@@ -32,280 +34,68 @@
     <p>Content content content content contentcontent contentcontent contentcontent contentcontent contentcontent contentcontent contentcontent content content content content content content content content content content content content content content content content content content content content content content content content content content content content content content </p>
     <p>Content content content content contentcontent contentcontent contentcontent contentcontent contentcontent contentcontent contentcontent content content content content content content content content content content content content content content content content content content content content content content content content content content content content content content </p>
   </div>
-
-  <div class="l-main-overlay is-hidden">
-    <p>Overlay panel</p>
-    <button class="js-overlay-close">Close overlay panel</button>
-    <p>Content content content content contentcontent contentcontent contentcontent contentcontent contentcontent contentcontent contentcontent content content content content content content content content content content content content content content content content content content content content content content content content content content content content content content </p>
-    <p>Content content content content contentcontent contentcontent contentcontent contentcontent contentcontent contentcontent contentcontent content content content content content content content content content content content content content content content content content content content content content content content content content content content content content content </p>
-    <p>Content content content content contentcontent contentcontent contentcontent contentcontent contentcontent contentcontent contentcontent content content content content content content content content content content content content content content content content content content content content content content content content content content content content content content </p>
-    <p>Content content content content contentcontent contentcontent contentcontent contentcontent contentcontent contentcontent contentcontent content content content content content content content content content content content content content content content content content content content content content content content content content content content content content content </p>
-    <p>Content content content content contentcontent contentcontent contentcontent contentcontent contentcontent contentcontent contentcontent content content content content content content content content content content content content content content content content content content content content content content content content content content content content content content </p>
-    <p>Content content content content contentcontent contentcontent contentcontent contentcontent contentcontent contentcontent contentcontent content content content content content content content content content content content content content content content content content content content content content content content content content content content content content content </p>
-    <p>Content content content content contentcontent contentcontent contentcontent contentcontent contentcontent contentcontent contentcontent content content content content content content content content content content content content content content content content content content content content content content content content content content content content content content </p>
-    <p>Content content content content contentcontent contentcontent contentcontent contentcontent contentcontent contentcontent contentcontent content content content content content content content content content content content content content content content content content content content content content content content content content content content content content content </p>
-    <p>Content content content content contentcontent contentcontent contentcontent contentcontent contentcontent contentcontent contentcontent content content content content content content content content content content content content content content content content content content content content content content content content content content content content content content </p>
-  </div>
-
-  <div class="l-aside is-hidden">
-    <p>Right aside panel</p>
-    <button class="js-aside-close">Close aside panel</button>
-    <p>
-    <span class="js-resize-aside" style="cursor:grab; writing-mode: vertical-lr;">[Drag me to resize]</span>
-    </p>
-  </div>
-
-  <div class="l-status">
-    Status bar... <span class="js-resize" style="cursor:grab">[Drag me to resize]</span>
-  </div>
 </div>
-
-
-
-
 
 <style>
   body { margin: 0; }
 
-  /* small screen */
- .l-app {
-   display: grid;
-   grid-template-columns: min-content 1fr min-content;
-   grid-template-rows: min-content 1fr min-content;
-   grid-template-areas:
-    "side top top"
-    "side main right"
-    "side bottom right";
-   height: 100vh;
-   width: 100vw;
- }
+  /* proof of concept dummy styling for contents of side navigation components: */
 
- .l-aside {
-   grid-area: right;
-   width: 300px;
-   background: #777;
-   padding: 10px;
- }
-
-  .l-toggle {
-    color: #FFF;
+  .poc-side-navigation,
+  .poc-navigation-controls {
     background: #111;
-    text-align: right;
-    padding: 5px;
-
-    grid-area: top;
-  }
-
-  .l-main {
-    grid-area: main;
-    overflow-y: auto;
+    color: #FFF;
     padding: 10px;
   }
 
-  .l-main-overlay {
-      grid-area: main;
-      justify-self: right;
-      max-width: 500px;
-      background: #f4f4f4;
-      box-shadow: rgba(0,0,0,0.5) 0 0 10px;
-      overflow-y: auto;
-      padding: 10px;
-  }
-
-  .l-main-overlay.is-aligned {
-    justify-self: initial;
-    max-width: none;
-    /* use margin-left to position left side of overlay panel */
-  }
-
-  .l-sidebar {
-    color: #FFF;
-    background: #111;
-    width: 200px;
-    position: fixed;
+  .poc-navigation-controls {
+    display: flex;
+    flex-direction: row-reverse;
+    position: sticky;
     top: 0;
-    bottom: 0;
-    left: 0;
-    height: 100vh;
-    overflow-y: auto;
-
-    padding: 10px;
   }
 
-  .l-status {
-    background: #CCC;
-    height: 30px;
-    grid-area: bottom;
-  }
-
-  .is-hidden {
+  .poc-navigation__pin {
     display: none;
   }
 
-  .l-sidebar .pin {
-    display: none;
-  }
-
-  @media (max-width: 300px) {
-    .l-sidebar {
-      width: 100%;
-    }
-  }
-
-
-  @media (min-width: 600px) {
-    .l-sidebar .toggle,
-    .l-toggle {
+  @media (min-width: 620px) {
+    .poc-navigation__close {
       display: none;
     }
 
-    .l-app {
-      grid-template-columns: 50px 1fr;
-    }
-
-    .l-sidebar .pin {
+    .poc-navigation__pin {
       display: block;
-    }
-
-    .l-sidebar.is-hidden {
-      display: block;
-    }
-
-    .l-sidebar {
-      width: 50px;
-      white-space: nowrap;
-      transition: width 100ms;
-    }
-
-    .l-sidebar:hover {
-      width: 200px;
-    }
-
-
-    /* pinned */
-
-    .l-app.is-pinned {
-      grid-template-columns: min-content 1fr;
-    }
-
-    .l-app.is-pinned .l-sidebar {
-      width: 200px;
-      position: static;
-      grid-area: side;
     }
   }
 
-  @media (min-width: 1200px) {
-    .l-sidebar .pin {
+  .p-icon--pin {
+    background: url("https://assets.ubuntu.com/v1/5cca09bb-pin.svg");
+  }
+
+  @media (min-width: 1032px) {
+    .poc-navigation-controls {
       display: none;
     }
-
-    /* same as pinned */
-    .l-app {
-      grid-template-columns: min-content 1fr;
-    }
-
-    .l-sidebar {
-      width: 200px;
-      position: static;
-      grid-area: side;
-    }
   }
+
 </style>
 
 <script>
   document.querySelector(".js-menu-toggle").addEventListener("click", function() {
-    document.querySelector(".l-sidebar").classList.toggle("is-hidden");
+    document.querySelector(".l-navigation").classList.toggle("is-collapsed");
   });
   document.querySelector(".js-menu-close").addEventListener("click", function() {
-    document.querySelector(".l-sidebar").classList.add("is-hidden");
+    document.querySelector(".l-navigation").classList.add("is-collapsed");
   });
-
-  document.querySelector(".js-aside-toggle").addEventListener("click", function() {
-    document.querySelector(".l-aside").classList.toggle("is-hidden");
-  });
-  document.querySelector(".js-aside-close").addEventListener("click", function() {
-    document.querySelector(".l-aside").classList.add("is-hidden");
-  });
-
-  document.querySelector(".js-overlay-toggle").addEventListener("click", function() {
-    document.querySelector(".l-main-overlay").classList.remove("is-aligned");
-    document.querySelector(".l-main-overlay").style.marginLeft = '';
-    document.querySelector(".l-main-overlay").classList.toggle("is-hidden");
-  });
-  document.querySelector(".js-overlay-close").addEventListener("click", function() {
-    document.querySelector(".l-main-overlay").classList.remove("is-aligned");
-    document.querySelector(".l-main-overlay").style.marginLeft = '';
-    document.querySelector(".l-main-overlay").classList.add("is-hidden");
-  });
-
-  document.querySelectorAll(".js-overlay-align-toggle").forEach((button) => {
-    button.addEventListener("click", function() {
-      document.querySelector(".l-main-overlay").classList.remove("is-hidden");
-      document.querySelector(".l-main-overlay").classList.add("is-aligned");
-      var offset = button.getBoundingClientRect().right - document.querySelector(".l-main").getBoundingClientRect().left;
-      document.querySelector(".l-main-overlay").style.marginLeft = offset + "px";
-    });
-  })
-
-
 
   document.querySelector(".js-menu-pin").addEventListener("click", function() {
-    document.querySelector(".l-app").classList.toggle("is-pinned");
-    if (document.querySelector(".l-app").classList.contains("is-pinned")) {
-      document.querySelector(".js-menu-pin").innerText = "Unpin"
+    document.querySelector(".l-application").classList.toggle("has-pinned-navigation");
+    if (document.querySelector(".l-application").classList.contains("has-pinned-navigation")) {
+      document.querySelector(".js-menu-pin").querySelector('i').classList.remove('p-icon--pin');
     } else {
-      document.querySelector(".js-menu-pin").innerText = "Pin"
+      document.querySelector(".js-menu-pin").querySelector('i').classList.add('p-icon--pin');
     }
   });
-
-  var statusBar = document.querySelector(".l-status");
-  var startX, startY, startHeight = 30;
-  document.querySelector(".js-resize").addEventListener('mousedown', initDrag, false);
-
-  function initDrag(e) {
-     startX = e.clientX;
-     startY = e.clientY;
-     startHeight = parseInt(document.defaultView.getComputedStyle(statusBar).height, 10);
-     document.documentElement.addEventListener('mousemove', doDrag, false);
-     document.documentElement.addEventListener('mouseup', stopDrag, false);
-  }
-
-  function doDrag(e) {
-     var h = (startHeight + startY - e.clientY);
-     if (h >= 30) {
-       statusBar.style.height = h + 'px';
-     }
-  }
-
-  function stopDrag(e) {
-      document.documentElement.removeEventListener('mousemove', doDrag, false);
-      document.documentElement.removeEventListener('mouseup', stopDrag, false);
-  }
-
-
-  var asidePanel = document.querySelector(".l-aside");
-  var startX, startY, startWidth = 100;
-  document.querySelector(".js-resize-aside").addEventListener('mousedown', initDragAside, false);
-
-  function initDragAside(e) {
-     startX = e.clientX;
-     startY = e.clientY;
-     startWidth = parseInt(document.defaultView.getComputedStyle(asidePanel).width, 10);
-     document.documentElement.addEventListener('mousemove', doDragAside, false);
-     document.documentElement.addEventListener('mouseup', stopDragAside, false);
-  }
-
-  function doDragAside(e) {
-     var w = (startWidth + startX - e.clientX);
-     if (w >= 100) {
-       asidePanel.style.width = w + 'px';
-     }
-  }
-
-  function stopDragAside(e) {
-      document.documentElement.removeEventListener('mousemove', doDragAside, false);
-      document.documentElement.removeEventListener('mouseup', stopDragAside, false);
-  }
 </script>
 {% endblock %}
