Add status bar and better demo content in main area

--- a/scss/_layouts_application.scss
+++ b/scss/_layouts_application.scss
@@ -13,11 +13,7 @@
 
   // Top navigation bar to toggle side navigation on small screens
   .l-navigation-bar {
-    background: #111;
-    color: #fff;
     grid-area: navbar;
-    padding: 5px;
-    text-align: right;
   }
 
   // Navigation panel/drawer
@@ -102,6 +98,9 @@
   .l-main {
     grid-area: main;
     overflow-y: auto;
-    padding: 10px;
+  }
+
+  .l-status {
+    grid-area: status;
   }
 }
