--- a/templates/docs/examples/layouts/application.html
+++ b/templates/docs/examples/layouts/application.html
@@ -12,15 +12,18 @@
 
   <div class="l-navigation is-collapsed">
     <div class="l-navigation__content">
-      <div class="poc-navigation-controls">
-        <button class="p-button--base has-icon u-no-margin poc-navigation__close js-menu-close"><i class="p-icon--close"></i></button>
-        <button class="p-button--base has-icon u-no-margin poc-navigation__pin js-menu-pin"><i class="p-icon--close p-icon--pin"></i></button>
-      </div>
       <div class="poc-side-navigation">
-        <p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p>
-        <p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p>
-        <p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p>
-        <p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p>
+        <div class="poc-side-navigation__controls">
+          <button class="p-button--base has-icon u-no-margin poc-navigation__close js-menu-close"><i class="p-icon--close"></i></button>
+          <button class="p-button--base has-icon u-no-margin poc-navigation__pin js-menu-pin"><i class="p-icon--close p-icon--pin"></i></button>
+        </div>
+        <div class="poc-side-navigation__items">
+          <p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p>
+          <p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p>
+          <p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p>
+          <p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p><p>Menu item</p>
+        </div>
+
       </div>
     </div>
   </div>
@@ -59,6 +62,9 @@
           </tfoot>
         </table>
 
+        <p>
+          <button class="js-aside-toggle">Toggle aside panel</button>
+        </p>
         <p>Content content content content contentcontent contentcontent contentcontent contentcontent contentcontent contentcontent contentcontent content content content content content content content content content content content content content content content content content content content content content content content content content content content content content content</p>
         <p>Content content content content contentcontent contentcontent contentcontent contentcontent contentcontent contentcontent contentcontent content content content content content content content content content content content content content content content content content content content content content content content content content content content content content content </p>
         <p>Content content content content contentcontent contentcontent contentcontent contentcontent contentcontent contentcontent contentcontent content content content content content content content content content content content content content content content content content content content content content content content content content content content content content content </p>
@@ -74,6 +80,13 @@
   <div class="l-status">
     <div class="poc-status">Status bar</div>
   </div>
+
+  <div class="l-aside u-hide">
+    <div class="poc-aside-content">
+      <p>Right aside panel</p>
+      <button class="js-aside-close">Close aside panel</button>
+    </div>
+  </div>
 </div>
 
 <style>
@@ -88,14 +101,19 @@
     text-align: right;
   }
 
-  .poc-side-navigation,
-  .poc-navigation-controls {
+  .poc-side-navigation {
     background: #111;
     color: #FFF;
+    min-height: 100vh;
+  }
+
+  .poc-side-navigation__items {
     padding: 10px;
   }
 
-  .poc-navigation-controls {
+  .poc-side-navigation__controls {
+    background: #111;
+    padding: 10px;
     display: flex;
     flex-direction: row-reverse;
     position: sticky;
@@ -130,6 +148,12 @@
     padding: 10px;
     background: #CCC;
   }
+
+  .poc-aside-content {
+    width: 300px;
+    padding: 10px;
+    min-height: 100vh;
+  }
 </style>
 
 <script>
@@ -138,6 +162,13 @@
   });
   document.querySelector(".js-menu-close").addEventListener("click", function() {
     document.querySelector(".l-navigation").classList.add("is-collapsed");
+  });
+
+  document.querySelector(".js-aside-toggle").addEventListener("click", function() {
+    document.querySelector(".l-aside").classList.toggle("u-hide");
+  });
+  document.querySelector(".js-aside-close").addEventListener("click", function() {
+    document.querySelector(".l-aside").classList.add("u-hide");
   });
 
   document.querySelector(".js-menu-pin").addEventListener("click", function() {
