icon position fix

--- a/scss/_patterns_chip.scss
+++ b/scss/_patterns_chip.scss
@@ -123,10 +123,12 @@
       );
 
       display: inline;
+      left: $sp-unit * 0.5;
       line-height: 1rem;
-      margin-right: -#{$sp-unit};
+      margin-right: -$sp-unit * 0.5;
       padding: 0;
       position: relative;
+      top: 0.05rem;
     }
   }
 }
