--- a/scss/_settings_colors.scss
+++ b/scss/_settings_colors.scss
@@ -21,6 +21,8 @@ $color-information: #24598f !default;
 // STATE VARIABLES
 $disabled-element-opacity: 0.33;
 
+$shadow-opacity: 0.2;
+
 // Link colors
 $color-link: #06c !default;
 $color-link-visited: #7d42b8 !default;
@@ -37,11 +39,6 @@ $active-background-opacity-amount: 0.15;
 
 // NON-SEMANTIC COLOURS
 $color-label-validated: #006b75;
-
-// Branding colors
-$color-brand: #333 !default;
-$color-accent: $color-brand !default;
-$color-accent-background: $color-accent !default;
 
 $states: (
   error: $color-negative,
@@ -102,3 +99,9 @@ $colors--dark-theme--background-overlay: transparentize($color-dark, 0.15) !defa
 $colors--dark-theme--border-default: rgba($colors--dark-theme--text-default, 0.2) !default;
 $colors--dark-theme--border-high-contrast: rgba($colors--dark-theme--text-default, 0.4) !default;
 $colors--dark-theme--border-low-contrast: rgba($colors--dark-theme--text-default, 0.1) !default;
+
+// Branding colors
+$color-brand: #333 !default;
+$color-brand-background: $colors--dark-theme--background-default;
+$color-accent: $color-brand !default;
+$color-accent-background: $color-accent !default;
