tuck aside under statusbar

--- a/scss/_layouts_application.scss
+++ b/scss/_layouts_application.scss
@@ -17,7 +17,7 @@
     grid-template-areas:
       'nav  navbar navbar'
       'nav  main   aside'
-      'nav  status aside';
+      'nav  status status';
     grid-template-columns: min-content 1fr min-content;
     grid-template-rows: min-content 1fr min-content;
     height: 100vh;
